# backend/internal/dto/io_response.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateImageResponse struct {
+	URL      string `json:"url"`
+	Filename string `json:"filename"`
+}
